--- a/gb/20/8/27/n12361663.md
+++ b/gb/20/8/27/n12361663.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vtfrag334/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vtfrag334/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vtfrag334/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vtfrag334/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vtfrag334/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>武汉弘芯爆资金断链危机 2家台厂误踩雷</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年08月27日讯】（大纪元记者张原彰台湾综合报导）据中国媒体报导，中国半导体厂武汉弘芯面临资金缺口，随时可能面临资金断链的危机，而2家台湾厂商是其供应商，其中，帆宣科技因未收到尾款，已将卖给弘芯的设备撤走。台<ahref="https://github.com/vtfrag334/djy/blob/master/gb/tag/%E5%AD%A6%E8%80%85.md#1">学者</a>提醒，美中经济战聚焦半导体产业，中国半导体业受到高度冲击，台厂必须高度警觉，思考有无替代方案。</p>
+<p>【大纪元2020年08月27日讯】（大纪元记者张原彰台湾综合报导）据中国媒体报导，中国半导体厂武汉弘芯面临资金缺口，随时可能面临资金断链的危机，而2家台湾厂商是其供应商，其中，帆宣科技因未收到尾款，已将卖给弘芯的设备撤走。台<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A6%E8%80%85.md#1">学者</a>提醒，美中经济战聚焦半导体产业，中国半导体业受到高度冲击，台厂必须高度警觉，思考有无替代方案。</p>
 <p>成立于2017年的武汉弘芯，曾在2019年6月大动作挖角台积电前共同营运长蒋尚义，而受到关注，日前再传出挖角50多名台积电工程师，但据媒体报导，在武汉地方政府7月的报告里，已强调武汉弘芯“存在较大资金缺口，随时面临资金链断裂导致项目停滞的风险”。</p>
 <p>报导指出，武汉弘芯在去年底曾拖欠分包商“武汉环宇基础建设”4,100万人民币的工程款被告上法庭，导致弘芯公司账户被冻结，二期价值7,530万元的土地也因此被查封；外界推估，武汉在年初封城76天，使得武汉弘芯的发展受到拖累。</p>
 <p>报导指出，有2家台湾的半导体设备供应商受到波及，帆宣系统科技也因为没收到尾款，把卖给弘芯的特气柜从厂区撤走；亚翔集成则是承揽弘芯洁净室及机电系统工程，按照2019年的合约计算，有近5千万元的工程款未入账。</p>
@@ -20,48 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/19/n12340898.md#1">学者：港版国安法危及所有加拿大人</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/21/n12348788.md#1">大陆农民没余粮 学者：粮食增产数据造假</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/22/n12350431.md#1">中共为何又在黄海南海军演 学者解析</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/22/n12350671.md#1">美学者：世界处于危险拐点 是时候遏制中共</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/23/n12351349.md#1">学者示警：为并吞台湾 中共什么都愿交易</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/23/n12351533.md#1">马英九称中共可信 学者批评其斯德哥尔摩症</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12352785.md#1">万名印度人在台做啥？ 印籍中研院学者揭密</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353745.md#1">双城米其林指南出炉 学者：可帮助发展观光</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354097.md#1">“光盘行动”成笑料 学者：饥荒来自独裁统治</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12357445.md#1">澳学者：西方已清醒 中共在做最后挣扎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/19/n12340898.md#1">学者：港版国安法危及所有加拿大人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/21/n12348788.md#1">大陆农民没余粮 学者：粮食增产数据造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/22/n12350431.md#1">中共为何又在黄海南海军演 学者解析</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/22/n12350671.md#1">美学者：世界处于危险拐点 是时候遏制中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/23/n12351349.md#1">学者示警：为并吞台湾 中共什么都愿交易</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/23/n12351533.md#1">马英九称中共可信 学者批评其斯德哥尔摩症</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/24/n12352785.md#1">万名印度人在台做啥？ 印籍中研院学者揭密</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/24/n12353745.md#1">双城米其林指南出炉 学者：可帮助发展观光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/24/n12354097.md#1">“光盘行动”成笑料 学者：饥荒来自独裁统治</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/25/n12357445.md#1">澳学者：西方已清醒 中共在做最后挣扎</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/vtfrag334/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10043633.md#1" target="_blank">叶光庭：共产党把我从“左派”改造成“右派”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353033.md#1">日本神秘湖泊“龙之眼” 演绎龙的传说</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/21/n12347600.md#1">七夕有哪些古风情？考古发现源流久远</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/27/n12360401.md#1">【西岸观察】美国第一夫人演讲 谁更有风度？</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/26/n12359090.md#1">【珍言真语】潘东凯：不准选举 全民检测有阴谋</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/26/n12358985.md#1">【有冇搞错】美军步步紧逼 U-2闯入共军演习禁区</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354614.md#1">新疆过激防疫手段曝光 民众崩溃群吼视频流出</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356542.md#1">中共喉舌三万字批判蓬佩奥 反被嘲讽</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356886.md#1">回应习近平讲话 美防长：美军已准备好</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12357141.md#1">65岁张国立被搀扶拍戏 传遭吸毒家暴儿害惨</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354392.md#1">范冰冰遭吴秀波起诉 疑涉李晨执导影片分账</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356940.md#1">逃税风波过去两年 范冰冰获首个全球代言</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354738.md#1">连续上四档综艺节目 周迅被形容“走下云端”</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/26/n12359533.md#1">新剧造型曝光获称小章子怡 童瑶高情商回应</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354004.md#1">失智症能潜伏几十年？出现8个征兆要当心</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354783.md#1">中医推荐“养脾胃三宝”摆脱疲劳、胃病又降压</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353985.md#1">报复？36斤鲭鱼跃出水面 撞死澳洲钓鱼男</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/19/n12343660.md#1">【罗厨寻味】鱼肉酿秋葵</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356691.md#1">膝关节疼痛不敢动？单脚摆10下甩掉膝盖痛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vtfrag334/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vtfrag334/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12361663.htm">武汉弘芯爆资金断链危机 2家台厂误踩雷</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12361663.htm">武汉弘芯爆资金断链危机 2家台厂误踩雷</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/vtfrag334/djy/blob/master/gb/20/8/27/n12361663.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vtfrag334/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vtfrag334/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vtfrag334/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/8/27/n12361663.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
